@@ -1,13 +1,13 @@
 package net.weesli.rClaim.StorageManager;
 
 import net.weesli.rClaim.RClaim;
-import net.weesli.rClaim.tasks.ClaimTask;
 import net.weesli.rClaim.utils.Claim;
 import net.weesli.rClaim.utils.ClaimPermission;
 import net.weesli.rClaim.utils.ClaimStatus;
 import net.weesli.rozsLib.ConfigurationManager.YamlFileBuilder;
 import org.bukkit.Bukkit;
 import org.bukkit.Chunk;
+import org.bukkit.Location;
 import org.bukkit.World;
 import org.bukkit.configuration.file.FileConfiguration;
 
@@ -17,27 +17,33 @@ import java.util.stream.Collectors;
 
 public class YamlStorage extends StorageImpl{
 
-    YamlFileBuilder claim_builder = RClaim.getClaim_builder();
-    FileConfiguration config_claim = claim_builder.load();
+    private YamlFileBuilder claim_builder = new YamlFileBuilder(RClaim.getInstance(), "claims").setPath(new File(RClaim.getInstance().getDataFolder(), "data"));
+    private FileConfiguration config_claim = claim_builder.load();
 
     @Override
     public void insertClaim(Claim claim) {
         config_claim.set("claims." + claim.getID() + ".owner", claim.getOwner().toString());
-        config_claim.set("claims." + claim.getID() + ".status", claim.getClaimStatuses().stream().map(ClaimStatus::name).toList());
-        config_claim.set("claims." + claim.getID() + ".members", claim.getMembers().stream().map(UUID::toString).toList());
+        config_claim.set("claims." + claim.getID() + ".status", claim.getClaimStatuses().stream().map(ClaimStatus::name).collect(Collectors.toList()));
+        config_claim.set("claims." + claim.getID() + ".members", claim.getMembers().stream().map(UUID::toString).collect(Collectors.toList()));
         claim.getClaimPermissions().forEach((key, value) -> {
-            config_claim.set("claims." + claim.getID() + ".permissions." + key, value.stream().map(ClaimPermission::name).toList());
+            config_claim.set("claims." + claim.getID() + ".permissions." + key, value.stream().map(ClaimPermission::name).collect(Collectors.toList()));
         });
         config_claim.set("claims." + claim.getID() + ".chunk.world", claim.getChunk().getWorld().getName());
         config_claim.set("claims." + claim.getID() + ".chunk.x", claim.getChunk().getX() * 16);
         config_claim.set("claims." + claim.getID() + ".chunk.z", claim.getChunk().getZ() * 16);
+        if (claim.getHomeLocation() == null){
+            config_claim.set("claims." + claim.getID() + ".home", "");
+        }else {
+            claim_builder.setLocation("claims." + claim.getID() + ".home", claim.getHomeLocation());
+        }
+        config_claim.set("claims." + claim.getID() + ".isCenter", claim.isCenter());
         claim_builder.save();
     }
 
     @Override
     public Claim getClaim(String id) {
-        if (config_claim.contains("claims." + id)) {
-            UUID uuid = UUID.fromString(Objects.requireNonNull(config_claim.getString("claims." + id + ".owner")));
+        if (config_claim.get("claims") != null) {
+            UUID uuid = UUID.fromString(config_claim.getString("claims." + id + ".owner"));
             List<UUID> members = config_claim.getStringList("claims." + id + ".members").stream()
                     .map(UUID::fromString)
                     .collect(Collectors.toCollection(ArrayList::new));
@@ -57,8 +63,13 @@ public class YamlStorage extends StorageImpl{
             World world = Bukkit.getWorld(Objects.requireNonNull(config_claim.getString("claims." + id + ".chunk.world")));
             Chunk chunk = world.getChunkAt(config_claim.getInt("claims." + id + ".chunk.x") / 16,
                     config_claim.getInt("claims." + id + ".chunk.z") / 16);
-            Claim claim = new Claim(id, uuid, members, statuses, chunk);
+            boolean isCenter = config_claim.getBoolean("claims." + id + ".isCenter");
+            Claim claim = new Claim(id, uuid, members, statuses, chunk, isCenter);
             claim.setClaimPermissions(userCache);
+            if (config_claim.get("claims." + id + ".home") != null && !config_claim.getString("claims." + id + ".home").isEmpty()){
+                Location location = claim_builder.getLocation("claims." + id + ".home");
+                claim.setHomeLocation(location);
+            }
             return claim;
         }
         return null;
@@ -67,14 +78,20 @@ public class YamlStorage extends StorageImpl{
     @Override
     public void updateClaim(Claim claim) {
         config_claim.set("claims." + claim.getID() + ".owner", claim.getOwner().toString());
-        config_claim.set("claims." + claim.getID() + ".status", claim.getClaimStatuses().stream().map(ClaimStatus::name).collect(Collectors.toList()));
-        config_claim.set("claims." + claim.getID() + ".members", claim.getMembers().stream().map(UUID::toString).collect(Collectors.toList()));
+        config_claim.set("claims." + claim.getID() + ".status", claim.getClaimStatuses().stream().map(ClaimStatus::name).toList());
+        config_claim.set("claims." + claim.getID() + ".members", claim.getMembers().stream().map(UUID::toString).toList());
         claim.getClaimPermissions().forEach((key, value) -> {
-            config_claim.set("claims." + claim.getID() + ".permissions." + key, value.stream().map(ClaimPermission::name).collect(Collectors.toList()));
+            config_claim.set("claims." + claim.getID() + ".permissions." + key, value.stream().map(ClaimPermission::name).toList());
         });
         config_claim.set("claims." + claim.getID() + ".chunk.world", claim.getChunk().getWorld().getName());
         config_claim.set("claims." + claim.getID() + ".chunk.x", claim.getChunk().getX() * 16);
-        config_claim.set("claims." + claim.getID() + ".chunk.z", claim.getChunk().getZ()* 16);
+        config_claim.set("claims." + claim.getID() + ".chunk.z", claim.getChunk().getZ() * 16);
+        if (claim.getHomeLocation() == null){
+            config_claim.set("claims." + claim.getID() + ".home", "");
+        }else {
+            claim_builder.setLocation("claims." + claim.getID() + ".home", claim.getHomeLocation());
+        }
+        config_claim.set("claims." + claim.getID() + ".isCenter", claim.isCenter());
         claim_builder.save();
     }
 
@@ -113,8 +130,13 @@ public class YamlStorage extends StorageImpl{
             World world = Bukkit.getWorld(Objects.requireNonNull(config_claim.getString("claims." + id + ".chunk.world")));
             Chunk chunk = world.getChunkAt(config_claim.getInt("claims." + id + ".chunk.x") / 16,
                     config_claim.getInt("claims." + id + ".chunk.z") / 16);
-            Claim claim = new Claim(id, uuid, members, statuses, chunk);
+            boolean isCenter = config_claim.getBoolean("claims." + id + ".isCenter");
+            Claim claim = new Claim(id, uuid, members, statuses, chunk, isCenter);
             claim.setClaimPermissions(userCache);
+            if (config_claim.get("claims." + id + ".home") != null && !config_claim.getString("claims." + id + ".home").isEmpty()){
+                Location location = claim_builder.getLocation("claims." + id + ".home");
+                claim.setHomeLocation(location);
+            }
             claims.add(claim);
         }
         return claims;
